import "ApiRequest.proto";

message StartFightRequest{//战斗开始请求
	optional ApiRequest api = 1;//接口基础数据
	optional int32 missionId = 2;//关卡ID
	optional int32 teamId = 3;//所使用的Unit编队ID
}